wxGUI/gmodeler: re-enable link to user models available from SVN repository
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68048 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/wxpython/gmodeler/g.gui.gmodeler.html
+++ b/gui/wxpython/gmodeler/g.gui.gmodeler.html
@@ -421,11 +421,10 @@ r.colors = map = %map color = ndvi
   <a href="wxGUI.components.html">wxGUI components</a>
 </em>
 
-<!--
 <p>
-User-defined models available
-from <a href="http://svn.osgeo.org/grass/grass-addons/wxgui_modeler">SVN</a>.
--->
+See also user models available
+from <a href="http://svn.osgeo.org/grass/grass-addons/grass7/models">SVN
+repository</a>.
 
 <p>
 See also
