r.rgb: more keywords; fix example; r.blend manual: add r.rgb reference
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68076 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/r.rgb/r.rgb.html
+++ b/scripts/r.rgb/r.rgb.html
@@ -7,7 +7,7 @@ raster map and its associated color table (grey255).
 
 <div class="code"><pre>
 g.region raster=elevation -p
-r.rgb input=elevation
+r.rgb input=elevation red=elevation.r green=elevation.g blue=elevation.b
 </pre></div>
 
 <p>
