--- a/raster3d/raster3dintro.html
+++ b/raster3d/raster3dintro.html
@@ -51,7 +51,7 @@ and the latter could be confusing in case of 3D raster data.
 
 <p>
 3D raster map is divided into cells in the same way as the (2D) raster map.
-A cell is a cuboid or cube depending on the resolution.
+A cell is a cube or a (rectangular) cuboid depending on the resolution.
 The resolution influences volume of one cell.
 Some literature or other software may use terms such as volume, volume unit,
 volumetric pixel, volume pixel, or voxel.
