--- a/raster/r.topmodel/r.topmodel.html
+++ b/raster/r.topmodel/r.topmodel.html
@@ -1,9 +1,9 @@
 <h2>DESCRIPTION</h2>
 
-<b><em>r.topmodel</em></b> simulates TOPMODEL which is a physically based
+<em>r.topmodel</em> simulates TOPMODEL which is a physically based
 hydrologic model.
 
-<h3>Selected Parameters:</h3>
+<h3>Parameters description</h3>
 
 <dl>
 <dt><b>parameters</b></dt>
@@ -105,16 +105,16 @@ This file contains observed weather data.
 <dd>
 If a time step is specified, output will be generated for the specific time
 step in addition to the summary and total flows at the outlet. This parameter
-can be combined with topidxclass to specify a time step and topographic index
-class at the same time. If no topidxclass is given, output will be generated
+can be combined with <b>topidxclass</b> to specify a time step and topographic index
+class at the same time. If no <b>topidxclass</b> is given, output will be generated
 for all the topographic index classes.
 </dd>
 
 <dt><b>toptopidxclass</b></dt>
 <dd>
 If a topographic index class is specified, output will be generated for the
-given topographic index class. This parameter can be combined with timestep. If
-no timestep is given, output will be generated for all the time steps.
+given topographic index class. This parameter can be combined with <b>timestep</b>. If
+no <b>timestep</b> is given, output will be generated for all the time steps.
 </dd>
 
 <dt><b>topidx</b>, <b>ntoptopidxclasses</b>, <b>outtoptopidxstats</b></dt>
@@ -124,24 +124,25 @@ index statistics file. This map has to be already clipped to the catchment
 boundary. The entire range of topographic index values will be divided into
 <b>ntoptopidxclasses</b> and the area ratio of each class will be reported in the
 <b>outtoptopidxstats</b> file. These three parameters can be omitted unless a new
-topidxstats file needs to be created.
+<b>topidxstats</b> file needs to be created.
 </dd>
 </dl>
 
 
 <h2>REFERENCES</h2>
 
-Cho, H., 2000. GIS Hydrological Modeling System by Using Programming Interface
-of GRASS. Master's Thesis, Department of Civil Engineering, Kyungpook National
-University, Korea.
-<p>
-Beven K., R. Lamb, P. Quinn, R. Romanowicz, and J. Freer, 1995. TOPMODEL, in
-V.P. Singh (Ed.). Computer Models of Watershed Hydrology. Water Resources
-Publications.
-<p>
-Liaw, S.C., 1988. Streamflow Simulation Using a Physically Based Hydrologic
-Model in Humid Forested Watersheds. Dissertation, Colorado State University,
-CO. p163.
+<ul>
+  <li>Cho, H., 2000. GIS Hydrological Modeling System by Using Programming Interface
+    of GRASS. Master's Thesis, Department of Civil Engineering, Kyungpook National
+    University, Korea.
+  <li>Beven K., R. Lamb, P. Quinn, R. Romanowicz, and J. Freer, 1995. TOPMODEL, in
+    V.P. Singh (Ed.). Computer Models of Watershed Hydrology. Water Resources
+    Publications.
+  <li>
+    Liaw, S.C., 1988. Streamflow Simulation Using a Physically Based Hydrologic
+    Model in Humid Forested Watersheds. Dissertation, Colorado State University,
+    CO. p163.
+</ul>
 
 
 <h2>SEE ALSO</h2>
@@ -156,9 +157,10 @@ CO. p163.
 
 <h2>AUTHORS</h2>
 
-<a href="mailto:grass4u@gmail com">Huidae Cho</a><br>
+<a href="mailto:grass4u@gmail com">Huidae Cho</a>, 
 Hydro Laboratory, Kyungpook National University, South Korea
 <p>
 Based on TMOD9502.FOR by Keith Beven.
 
-<p><i>Last changed: $Date$</i>
+<p>
+<i>Last changed: $Date$</i>
