various typo fixed (https://trac.osgeo.org/grass/ticket/2971)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@68174 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.stream.extract/r.stream.extract.html
+++ b/raster/r.stream.extract/r.stream.extract.html
@@ -25,7 +25,7 @@ recommended to use internally computed flow accumulation if a
 depression map is provided.
 
 <p>
-Option <b>threshold</b> defines the minimum (optionally modifed) flow
+Option <b>threshold</b> defines the minimum (optionally modified) flow
 accumulation value that will initiate a new stream. If Montgomery's
 method for channel initiation is used, the cell value of the
 accumulation input map is multiplied by <tt>(tan(local
