--- a/vector/v.net.centrality/v.net.centrality.html
+++ b/vector/v.net.centrality/v.net.centrality.html
@@ -21,7 +21,7 @@ Betweenness measure is not normalised. In order to get the normalised
 values (between 0 and 1), each number needs to be divided by <em>N 
 choose 2=N*(N-1)/2</em> where N is the number of nodes in the 
 connected component. Computation of eigenvector measure terminates 
-if the given number of iterations is reached or the cummulative <em>
+if the given number of iterations is reached or the cumulative <em>
 squared</em> error between the successive iterations is less than <b>
 error</b>.
 
