wxGUI/dbmgr: update images in the manual
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68232 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/wxpython/dbmgr/g.gui.dbmgr.html
+++ b/gui/wxpython/dbmgr/g.gui.dbmgr.html
@@ -25,11 +25,18 @@ module <em>g.gui.dbmgr</em>.
 </ul>
 
 <center>
+<a href="dbmgr_frame.png"><img src="dbmgr_frame.png" alt="Attribute Table Manager" width="600"></a>
 <br>
-<img src="dbmgr_frame.jpg" border="1" alt="Attribute Table Manager">
-<br><br>
+<i>Figure: Simple attribute filtering using Attribute Table Manager.</i>
 </center>
 
+<h3>SQL Builder</h3>
+
+<center>
+<a href="dbmgr_sql_builder.png"><img src="dbmgr_sql_builder.png" alt="Attribute Table Manager and SQL Builder" width="700"></a>
+<br>
+<i>Figure: Attribute filtering using Attribute Table Manager and SQL Builder.</i>
+</center>
 
 <h2>SEE ALSO</h2>
 
@@ -68,8 +75,8 @@ tutorials</a>.
 <h2>AUTHORS</h2>
 
 Martin Landa, <a href="http://www.fbk.eu">FBK-irst</a> (2007-2008),
-Trento, Italy, and <a href="http://www.cvut.cz">Czech Technical
-University in Prague</a>, Czech Republic<br>
+Trento, Italy, and OSGeoREL at the Czech Technical
+University in Prague, Czech Republic<br>
 Michael Barton, Arizona State University, USA<br>
 Jachym Cepicky
 
