--- a/gui/wxpython/gmodeler/g.gui.gmodeler.html
+++ b/gui/wxpython/gmodeler/g.gui.gmodeler.html
@@ -81,7 +81,7 @@ color="red">16</font>) Show manual and last of them is button
 There is also lower menu bar in Graphical modeler dialog where one can
 manage model items, see commands, add or manage model variables,
 define default values and descriptions. Python editor dialog window
-allows to see performation written in Python code. The rightmost tab of
+allows seeing performation written in Python code. The rightmost tab of
 the bottom menu is automatically triggered when the model is activated and
 shows all the steps of running GRASS modeler modules. In case of errors
 in the calculation process, it is written at that place.
