--- a/raster/r.neighbors/r.neighbors.html
+++ b/raster/r.neighbors/r.neighbors.html
@@ -389,7 +389,7 @@ g.region rows=10 cols=10
 </pre></div>
 
 Fill 50% of computational region with randomly located cells.
-"distance=0" will allow to fill adjacent cells.
+"distance=0" will allow filling adjacent cells.
 <div class="code"><pre>
 r.random.cells output=random_cells distance=0 ncells=50
 </pre></div>
