--- a/raster3d/r3.gwflow/r3.gwflow.html
+++ b/raster3d/r3.gwflow/r3.gwflow.html
@@ -47,7 +47,7 @@ status of single cells can be set with the status map, the following
 cell states are supported:
 
 <ul>
-<li>0 == inactive - the cell with status 0 will not be calulated,
+<li>0 == inactive - the cell with status 0 will not be calculated,
  active cells will have a no flow boundary to an inactive cell</li>
 <li>1 == active - this cell is used for groundwater calculation,
  inner sources can be defined for those cells</li>
