--- a/vector/v.what.rast/v.what.rast.html
+++ b/vector/v.what.rast/v.what.rast.html
@@ -6,7 +6,7 @@ vector attribute table with the retrieved raster cell value or print it.
 
 <p>The column type needs to be numeric (integer, float, double,
 ...). If the column doesn't exist in the vector attribute table than
-the module will create the new column of type correspoding with the
+the module will create the new column of type corresponding with the
 input raster map.
 
 <p>
