--- a/scripts/g.search.modules/g.search.modules.html
+++ b/scripts/g.search.modules/g.search.modules.html
@@ -1,6 +1,6 @@
 <h2>DESCRIPTION</h2>
 
-<em>r.search.module</em> searches for given keyword in GRASS modules name,
+<em>g.search.module</em> searches for given keyword in GRASS modules name,
 description, keywords and optionally manpages too.
 
 <h2>NOTES</h2>
