d.mon manual: explain non-interactive use
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68306 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/display/d.mon/d.mon.html
+++ b/display/d.mon/d.mon.html
@@ -49,6 +49,13 @@ the graphics monitors the user wishes to direct output to.
 Currently <em>selected</em> a monitor can be released by <b>-r</b>
 flag.
 
+<h2>NOTES</h2>
+
+<em>d.mon</em> is designed for interactive use. If non-interactive use
+is needed (e.g., in a script) set <tt>GRASS_RENDER_IMMEDIATE=png</tt>
+(or <tt>=cairo</tt>) and use the related environment
+<a href="variables.html">variables</a> to control output size etc.
+
 <h2>EXAMPLES</h2>
 
 <h3>wx0 monitor</h3>
