--- a/raster/r.water.outlet/r.water.outlet.html
+++ b/raster/r.water.outlet/r.water.outlet.html
@@ -35,8 +35,8 @@ Carolina sample dataset</a> region:
 g.region raster=elev_lid792_1m -p
 # the watershed outlet position should be placed on a stream (from
 # accumulation map):
-r.watershed elev_lid792_1m thresh=5000 accum=accum_5K drain=draindir_5K output=basin_5K
-r.water.outlet input=draindir_5K output=basin_A30 coord=638740.423248,220271.519225
+r.watershed elev_lid792_1m threshold=5000 accumulation=accum_5K drainage=draindir_5K basin=basin_5K
+r.water.outlet input=draindir_5K output=basin_A30 coordinates=638740.423248,220271.519225
 
 d.mon wx0
 d.rast map=accum_5K
