v.net manual: fix example
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68337 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.net/v.net.html
+++ b/vector/v.net/v.net.html
@@ -39,7 +39,7 @@ the <em>connect</em> operation, some lines will share the same
 category. In order to assign unique costs to each line, a new layer 
 needs to be created with<br>
 <!-- like this it is rather useless, still to be improved (eg as a full example below!) -->
-<tt>v.category map=yourmap operation=add cat=1 step=1 layer=3</tt><br>
+<tt>v.category map=yourmap option=add cat=1 step=1 layer=3</tt><br>
 followed by<br>
 <tt>v.db.addtable map=yourmap layer=3 table=tablename</tt>.</li>
 
@@ -155,7 +155,7 @@ The examples are <a href="http://www.grassbook.org/datasets/datasets-3rd-edition
 <div class="code"><pre>
 v.net input=streets_wake output=streets_node operation=nodes
 # verify result
-v.category streets_node operation=report
+v.category streets_node option=report
 </pre></div>
 
 <h3>Merge in nodes from a separate map within given threshold</h3>
@@ -164,7 +164,7 @@ v.category streets_node operation=report
 v.net input=streets_wake points=firestations out=streets_net \
       operation=connect threshold=500
 # verify result
-v.category streets_net operation=report
+v.category streets_net option=report
 </pre></div>
 
 The nodes are stored in layer 2 unless <tt>node_layer=1</tt> is used.
@@ -184,7 +184,7 @@ Option 1: Save the file (e.g. "points.txt") and generate the map:
 v.net points=geodetic_swwake_pts output=geodetic_swwake_pts_net \
       operation=arcs file=points.txt
 # verify result
-v.category geodetic_swwake_pts_net operation=report
+v.category geodetic_swwake_pts_net option=report
 </pre></div>
 
 <p>
@@ -198,7 +198,7 @@ v.net points=geodetic_swwake_pts output=geodetic_swwake_pts_net \
 EOF
 
 # verify result
-v.category geodetic_swwake_pts_net operation=report
+v.category geodetic_swwake_pts_net option=report
 </pre></div>
 
 <h3>Generating network with turntable for vector point map</h3>
