--- a/raster/r.walk/r.walk.html
+++ b/raster/r.walk/r.walk.html
@@ -157,7 +157,7 @@ r.contour walkcost output=walkcost step=1000
  University of Aberdeen.
 <li> Steno Fontanari, University of Trento, Italy, Ingegneria per l'Ambiente e
  il Territorio, 2000-2001.
- Svilluppo di metodologie GIS per la determinazione dell'accessibilit‡
+ Svilluppo di metodologie GIS per la determinazione dell'accessibilit√†
  territoriale come supporto alle decisioni nella gestione ambientale.
 <li>Langmuir, E. 1984. Mountaincraft and leadership. The Scottish
  Sports Council/MLTB. Cordee, Leicester.
